[gd_scene load_steps=5 format=3 uid="uid://cvff4x14q8s07"]

[ext_resource type="FontFile" uid="uid://b03iyj4stw5l7" path="res://Pixel Craft.ttf" id="1_hc452"]
[ext_resource type="Script" path="res://Scripts/ui.gd" id="1_ioc1y"]
[ext_resource type="Texture2D" uid="uid://m4gi1k1nhv7o" path="res://Sprites/letter_piece.png" id="2_jki6l"]
[ext_resource type="Texture2D" uid="uid://bv6i524e25h4t" path="res://Sprites/Letter_icon_pixel.png" id="4_u0usf"]

[node name="UI" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ioc1y")

[node name="LetterText" type="Label" parent="."]
layout_mode = 0
offset_left = 49.0
offset_top = 30.0
offset_right = 605.0
offset_bottom = 128.0
theme_override_fonts/font = ExtResource("1_hc452")
theme_override_font_sizes/font_size = 25
text = "0/4"

[node name="PieceImage" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 114.0
offset_top = 16.0
offset_right = 204.0
offset_bottom = 106.0
texture = ExtResource("2_jki6l")

[node name="LetterImage" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 118.0
offset_top = 18.0
offset_right = 200.0
offset_bottom = 100.0
texture = ExtResource("4_u0usf")
expand_mode = 1
